--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "http": "0.0.0",
+    "http-post": "^0.1.1",
     "morgan": "~1.3.0",
     "q": "^1.1.1",
     "random-js": "^1.0.4",
