--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KimoDrawerNodeJs",
+  "name": "kimodrawer",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -15,9 +15,11 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "express-myconnection": "^1.0.4",
     "http": "0.0.0",
     "http-post": "^0.1.1",
     "morgan": "~1.3.0",
+    "mysql": "^2.5.3",
     "node-gcm": "^0.9.12",
     "q": "^1.1.1",
     "random-js": "^1.0.4",
