-- change main with start  in package.json -- copy bin/www to /server.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "main": "node ./bin/www.js"
+    "start": "node ./bin/www.js"
   },
   "dependencies": {
     "angular": "^1.3.3",
