--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "main": "./bin/www",
   "dependencies": {
     "angular": "^1.3.3",
     "angular-cookies": "^1.3.3",
