--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "cookie-session": "^1.1.0",
+    "crypto-js": "^3.1.2-5",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
